Rebuild camunda7-migrator as v2 by refactoring its fluent builder style to a less boilerplate customizer builder style